--- a/index.html
+++ b/index.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="./estilos/estilo.css">
+    <title>Caprichos de Paso</title>
 </head>
+
 <body>
-    <h1>Primera Pre Entrega</h1>
+    <header>
+        <div class="logo">
+            <img src="./img/logo.png" alt="logo de la empresa">
+        </div>
+
+        <nav class= "navbar navbar-expand-lg">
+            <div class="container-fluid ">
+              
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="./section/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./section/galeria.html">Galeria</a>
+                  </li><li class="nav-item">
+                    <a class="nav-link" href="./section/contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./section/tienda.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Tienda
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./section/tienda.html#plantas">Plantas</a></li>
+                      <li><a class="dropdown-item" href="./section/tienda.html#macetas">Macetas</a></li>
+                      <li><a class="dropdown-item" href="./section/tienda.html#herramientas">Herramientas</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+
+
+    <main>
+        <section class="contenedor-bienvenida">
+            <h1>¡Bienvenidos a Nuestro Vivero!</h1>
+            <p> ¡En caprichos de paso amamos las plantas! Por ese motivo te brindamos materiales e
+                información para que cuides de la mejor manera las tuyas.
+            </p>
+            <p>
+                En este sitio encontrarás todo lo que busques desde plantas y macetas, tierra y hasta diferentes tipo de
+                herramientas de jardín que te ayudarán a mantener o reavivar todas tus plantas y mejorar el aspecto de
+                tu jardín.
+            </p>
+            <div class="contenedor-uno">
+                <img src="./img/echeverias.png" alt="echeverias violetas">
+                <img src="./img/lirio.png" alt="dos lirios naraja">
+                <img src="./img/planta23.jpg" alt="aquilegia">
+                <img src="./img/planta21.jpg" alt="jazmin de hungria">
+            </div>
+        </section>
+
+
+    </main>
+
+
+
+
+    <footer>
+        <p class="text-footer">Vivero Caprichos de Paso</p>
+        <p class="text-footer">Paso de la Arena, Montevideo</p>
+        <p class="text-footer">Copyright &#169 Facundo Mazza 2022</p>
+        <div class="contenedor-footer">
+            <img src="./img/iconoins.png" alt="icono de instagram">
+            <img src="./img/iconowpp.png" alt="icono de whatsapp">
+        </div>
+    </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="./javascript/main.js"></script>
 </body>
+
 </html>
