--- a/section/contacto.html
+++ b/section/contacto.html
@@ -55,7 +55,7 @@
       
       <div class="contenedor-formulario">
               <h1> Ponete en Contacto con nosotros</h1>
-                <form action="#">
+                <form id="formulario-contacto">
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email">
                     <label for="nombre">Nombre</label>
@@ -65,6 +65,8 @@
                     <label for="mensaje">Dejanos tu mensaje</label>
                     <textarea name="mensaje" id="mensaje" cols="20" rows="5"></textarea>
                     <input class="enviar" type="submit">
+
+                    <p class="aviso-fallido" id="aviso-fallido"></p>
         
                 </form>
             </div>
@@ -83,6 +85,7 @@
         </div>
     </footer>
      <!-- JavaScript Bundle with Popper -->
+     <script src="../javascript/main.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
